## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src manpages
bin_SCRIPTS = ru_speak
doc_DATA = README README.ru
EXTRA_DIST = LICENSE README.ru ru_speak
MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub \
	configure depcomp install-sh Makefile.in missing ltmain.sh \
	m4/libtool.m4 m4/lt*.m4
